# tender-copilot

./: .env.example  .gitignore  README.md  docker-compose.yml  render.yaml
backend/: .env.example  .env.test  Dockerfile  error_output.txt  pyproject.toml  requirements.txt  simple_server.py  test_db.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/contexts/alert_engine/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py  tasks.py
backend/app/contexts/bid_generation/: models.py  repository.py  router.py  schemas.py  service.py  tasks.py
backend/app/contexts/bid_intelligence/: __init__.py  consortium_schemas.py  consortium_service.py  repository.py  router.py  schemas.py  service.py  tasks.py
backend/app/contexts/bid_lifecycle/: __init__.py  market_prices.py  models.py  repository.py  router.py  schemas.py  service.py  submission_gate.py  tasks.py
backend/app/contexts/company_profile/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/contexts/compliance_vault/: __init__.py  compliance_engine.py  models.py  repository.py  router.py  schemas.py  service.py  tasks.py
backend/app/contexts/partner_portal/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py  tasks.py
backend/app/contexts/tender_discovery/: __init__.py  freshness.py  models.py  repository.py  router.py  schemas.py  service.py  tasks.py
backend/app/contexts/tender_intelligence/: analysis_tasks.py  clause_service.py  models.py  repository.py  router.py  schemas.py  service.py  tasks.py
backend/app/contexts/tender_matching/: embedding_router.py  (+7 more)
backend/app/infrastructure/: celery_app.py  email_client.py  groq_client.py  redis_client.py  resend_client.py  storage.py  supabase_client.py  whatsapp.py  whatsapp_client.py
backend/app/middleware/: auth.py  error_handler.py  logging.py  tenant.py
backend/app/shared/: dependencies.py  events.py  exceptions.py  lang_context.py  logger.py  schemas.py  tasks.py
backend/migrations/: 001_initial_schema.sql
backend/tests/: conftest.py  test_bid_lifecycle.py  test_compliance_vault.py  test_compliance_vault_api.py
backend/tests/contexts/: __init__.py
(+110 files in other folders)
